--- a/app/about.html
+++ b/app/about.html
@@ -1095,67 +1095,70 @@
         </section>
 
         <section class="reviews">
-            <div class="container">
-              <h2 class="reviews__title">Отзывы наших клиентов</h2>
-              <div class="reviews-wrap">
-                <div class="reviews-item">
-                  <div data-video-url="images/video-2.mp4" class="reviews-v">
-                    <video preload="auto" no-controls loop autoplay playsinline muted>
-                    <source src="images/video-2.mp4"  type="video/mp4">
-                    </video>
-                  </div>
-                  <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
+          <div class="container">
+            <h2 class="reviews__title">Отзывы наших клиентов</h2>
+            <div class="reviews-wrap">
+              <div class="reviews-item">
+                <div data-video-url="images/video-2.mp4" class="reviews-v">
+                  <video preload="auto" no-controls loop autoplay playsinline muted>
+                  <source src="images/video-2.mp4"  type="video/mp4">
+                  </video>
                 </div>
-                <div class="reviews-item">
-                  <div class="reviews-i">
-                    <a href="images/doc-1.png">
-                      <img src="images/doc-1.png" alt="img">
-                    </a>
-                  </div>
-                  <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
-                </div>
-                <div class="reviews-item">
-                  <div data-video-url="images/video-2.mp4" class="reviews-v">
-                    <video preload="auto" no-controls loop autoplay playsinline muted>
-                    <source src="images/video-2.mp4"  type="video/mp4">
-                    </video>
-                  </div>
-                  <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
-                </div>
-                <div class="reviews-item">
-                  <div class="reviews-i">
-                    <a href="images/doc-1.png">
-                      <img src="images/doc-1.png" alt="img">
-                    </a>
-                  </div>
-                  <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
-                </div>
-                <div class="reviews-item">
-                  <div data-video-url="images/video-2.mp4" class="reviews-v">
-                    <video preload="auto" no-controls loop autoplay playsinline muted>
-                    <source src="images/video-2.mp4"  type="video/mp4">
-                    </video>
-                  </div>
-                  <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
-                </div>
-                <div class="reviews-item">
-                  <div class="reviews-i">
-                    <a href="images/doc-1.png">
-                      <img src="images/doc-1.png" alt="img">
-                    </a>
-                  </div>
-                  <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
-                </div>
+                <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
               </div>
-              <div class="reviews-arrows">
-                <div class="reviews-arrow reviews-arrow--prev">
-                  <img class="reviews-a" src="images/icons/slider-arrow-left.svg" alt="img">
+              <div class="reviews-item">
+                <div class="reviews-i">
+                  <a href="images/doc-1.png" class="rev-icon"><img src="images/zoom-icon.svg" alt=""></a>
+                  <a href="images/doc-1.png">
+                    <img src="images/doc-1.png" alt="img">
+                  </a>
                 </div>
-                <div class="reviews-arrow reviews-arrow--next">
-                  <img class="reviews-a" src="images/icons/slider-arrow.svg" alt="img">
+                <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
+              </div>
+              <div class="reviews-item">
+                <div data-video-url="images/video-2.mp4" class="reviews-v">
+                  <video preload="auto" no-controls loop autoplay playsinline muted>
+                  <source src="images/video-2.mp4"  type="video/mp4">
+                  </video>
                 </div>
+                <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
+              </div>
+              <div class="reviews-item">
+                <div class="reviews-i">
+                  <a href="images/doc-1.png" class="rev-icon"><img src="images/zoom-icon.svg" alt=""></a>
+                  <a href="images/doc-1.png">
+                    <img src="images/doc-1.png" alt="img">
+                  </a>
+                </div>
+                <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
+              </div>
+              <div class="reviews-item">
+                <div data-video-url="images/video-2.mp4" class="reviews-v">
+                  <video preload="auto" no-controls loop autoplay playsinline muted>
+                  <source src="images/video-2.mp4"  type="video/mp4">
+                  </video>
+                </div>
+                <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
+              </div>
+              <div class="reviews-item">
+                <div class="reviews-i">
+                  <a href="images/doc-1.png" class="rev-icon"><img src="images/zoom-icon.svg" alt=""></a>
+                  <a href="images/doc-1.png">
+                    <img src="images/doc-1.png" alt="img">
+                  </a>
+                </div>
+                <p class="reviews-text">Компания  ООО “Название”. Описание сотрудничества: <br> что делали для них.</p>
               </div>
             </div>
+            <div class="reviews-arrows">
+              <div class="reviews-arrow reviews-arrow--prev">
+                <img class="reviews-a" src="images/icons/slider-arrow-left.svg" alt="img">
+              </div>
+              <div class="reviews-arrow reviews-arrow--next">
+                <img class="reviews-a" src="images/icons/slider-arrow.svg" alt="img">
+              </div>
+            </div>
+          </div>
         </section>
     </main>
 
